5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1667_2321.log
== TEST (2019-04-16 16:14:35) 
-- CODE:
#Entrada das variaveis
H_Esp=9.654
H_Temp=1.3479

x=H_Esp/H_Temp

L_Esp=4.984
L_Temp=2.789

y=L_Esp/L_Tmp

#Digitar o nome do bruxo
nome=input("Escreva o nome do bruxo, HARRY/LUNA: ")

#CONDIÇÃO
if (nome.lower() HARRY):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- ERROR:
File "XXXX", line 16
    if (nome.lower() HARRY):
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:14:51) 
-- CODE:
#Entrada das variaveis
H_Esp=9.654
H_Temp=1.3479

x=H_Esp/H_Temp

L_Esp=4.984
L_Temp=2.789

y=L_Esp/L_Tmp

#Digitar o nome do bruxo
nome=input("Escreva o nome do bruxo, HARRY/LUNA: ")

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    y=L_Esp/L_Tmp
NameError: name 'L_Tmp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:17:46) 
-- CODE:
#Digitar o nome do bruxo
nom=imput("Qual o bruxo, HARRY/LUNA: ")
#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    nom=imput("Qual o bruxo, HARRY/LUNA: ")
NameError: name 'imput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:11) 
-- CODE:
#Digitar o nome do bruxo
nome = input("Qual o bruxo, HARRY/LUNA: ")

#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- OUTPUT:
7.1622523926107275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:18:22) 
-- CODE:
#Digitar o nome do bruxo
nome = input("Qual o bruxo, HARRY/LUNA: ")

#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- EXECUTION TIME:
0.155761
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
7.1622523926107275
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
7.1622523926107275
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:18:58) 
-- CODE:
#Digitar o nome do bruxo
nome = input("Qual o bruxo, HARRY/LUNA: ")

#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- OUTPUT:
7.1622523926107275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:19:09) 
-- CODE:
#Digitar o nome do bruxo
nome = input("Qual o bruxo, HARRY/LUNA: ")

#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- EXECUTION TIME:
0.139606
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
7.1622523926107275
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
7.1622523926107275
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:19:59) 
-- CODE:
#Digitar o nome do bruxo
nome = input("Qual o bruxo, HARRY/LUNA: ")

#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- OUTPUT:
7.1622523926107275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:15) 
-- CODE:
#Digitar o nome do bruxo
nome = input("Qual o bruxo, HARRY/LUNA: ")

#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- OUTPUT:
7.1622523926107275
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:47:36) 
-- CODE:
#Digitar o nome do bruxo
nome = input("Qual o bruxo, HARRY/LUNA: ")

#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- EXECUTION TIME:
0.144395
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
7.1622523926107275
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
7.1622523926107275
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:50:08) 
-- CODE:
#Digitar o nome do bruxo
nome = input("Qual o bruxo, HARRY/LUNA: ")

#Entrada das variaveis
HE=9.654
HT=1.3479

x=HE/HT

LE=4.984
LT=2.789

y=LE/LT

#CONDIÇÃO
if (nome.lower()):
	mensagem = x
	
else:
	mensagem = y

print(mensagem)
	

-- EXECUTION TIME:
0.136632
-- TEST CASE 1:
---- input:
Luna
---- correct output:
1.7870204374327716
---- user output:
7.1622523926107275
-- TEST CASE 2:
---- input:
Harry
---- correct output:
7.1622523926107275
---- user output:
7.1622523926107275
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
